CLIENT/src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@font-face {
    font-family: "Regular";
    src: url(../fonts/Regular.otf);
}

@font-face {
    font-family: "Ultrabold";
    src: url(../fonts/Ultrabold.otf);
}

:root {
    font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
    line-height: 1.5;
    font-weight: 400;

    color-scheme: light dark;
    color: rgba(255, 255, 255, 0.87);
    background-color: #02020B;

    font-synthesis: none;
    text-rendering: optimizeLegibility;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    -webkit-text-size-adjust: 100%;
}

body {
    margin: 0;
    display: flex;
    place-items: center;
    /* min-width: 320px;
    min-height: 100vh; */
    font-size: 1em;
    font-weight: 500;
    font-family: inherit;
    /* cursor: pointer; */
    transition: border-color 0.25s;
    --PhoneInputCountryFlag-height: 2.5rem;
}

.PhoneInputInput {
    background-color: transparent;
}

::-webkit-datetime-edit-text {
    color: #242424;
    padding: 0 0.3em;
}

::-webkit-calendar-picker-indicator {
    filter: invert(100%);
}

button:focus,
button:focus-visible {
    outline: 4px auto -webkit-focus-ring-color;
}

@media (prefers-color-scheme: light) {
    :root {
        color: #02020B;
        background-color: #FDF0D5;
    }
}

